Fixed the Package diagram to fir to the wrapped "_Border" area.
Steps to check:
1. Create package element
2. Increase the border parameter
3. Check that it is fit to size.

Redraw MainComponents diagram. Now it looks much better

--- a/diagrammer/css/main.css
+++ b/diagrammer/css/main.css
@@ -190,8 +190,12 @@ a {
 
 .us-package-body {
   padding: 0px;
-  border: 1px;
-  position: relative;
+  position: absolute;
+  top: 15px;
+  left:0px;
+  right:0px;
+  bottom: 0px;
+  margin: 0 auto;
   border: 1px solid black;
   text-decoration: none;
   text-align: center;
